tests/regression/errors/basic/type_error_2.csd
// Type error test 2
sus number drip = 2
sus text tea = "string_2"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 2:", wrong)
